--- a/src/template/header.html
+++ b/src/template/header.html
@@ -16,29 +16,28 @@
             <div id="navbarBasicExample" class="navbar-menu">
                 <div class="navbar-start">
                     <a class="navbar-item">
-                        Главная
-                    </a>
-
-                    <a class="navbar-item">
-                        О нас
+                        Main
                     </a>
                     <a class="navbar-item">
-                        Блог
+                        About Us
                     </a>
                     <a class="navbar-item">
-                        Портфолио
+                        Blog
                     </a>
                     <a class="navbar-item">
-                        Галерея
+                        Portfolio
                     </a>
                     <a class="navbar-item">
-                        Каталог
+                        Gallery
                     </a>
                     <a class="navbar-item">
-                        Контакты
+                        Catalog
                     </a>
                     <a class="navbar-item">
-                        Лендинг
+                        Contacts
+                    </a>
+                    <a class="navbar-item">
+                        Landing Page
                     </a>
                 </div>
                 <div class="navbar-end">
@@ -46,7 +45,7 @@
                         <div class="search">
                             <form action="search" method="post">
                                 <div class="search-input">
-                                    <input type="search" class="input" placeholder="Поиск...">
+                                    <input type="search" class="input" placeholder="Search...">
                                     <input type="submit" value="">
                                 </div>
                             </form>
